Clean source code

--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -24,7 +24,7 @@ jsoup\cite{jsoup} merupakan \textit{library} Java yang digunakan untuk menelusur
 	\label{fig:1_prasyarat_student_portal}
 \end{figure}
 
-Untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika, fitur-fitur yang diperlukan akan dianalisis kemudian diimplementasikan ke dalam sebuah program yang akan dinamakan Informatika Student Portal. Informatika Student Portal merupakan program berbasis web menggunakan Play Framework. Selain itu, data-data yang akan ditampilkan diambil langsung dari Portal Akademik Mahasiswa dengan \textit{web scraping} menggunakan \textit{library} jsoup. Untuk melakukan pengambilan data, jsoup harus mengetahui cara kerja dari Portal Akademik Mahasiswa. Analisis komunikasi Portal Akademik Mahasiswa akan dilakukan dengan menggunakan Chrome DevTools. 
+Untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika, fitur-fitur yang diperlukan akan dianalisis kemudian diimplementasikan ke dalam sebuah program yang akan dinamakan Informatika Student Portal. Informatika Student Portal merupakan aplikasi berbasis web menggunakan Play Framework. Selain itu, data-data yang akan diolah diambil langsung dari Portal Akademik Mahasiswa dengan \textit{web scraping} menggunakan \textit{library} jsoup. Untuk melakukan pengambilan data, jsoup harus mengetahui cara kerja dari Portal Akademik Mahasiswa. Analisis komunikasi Portal Akademik Mahasiswa akan dilakukan dengan menggunakan Chrome DevTools. 
 
 \section{Rumusan Masalah}
 \label{sec:rumusan_masalah}
