--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -149,7 +149,7 @@
 %
 %=============================================================================
 \namanpm{Herfan Heryandi}{2012730012}	%hilangkan tanda << & >>
-\tanggal{<<tanggal>>}{<<bulan>>}{2015}			%hilangkan tanda << & >>
+\tanggal{<<tanggal>>}{Desember}{2015}			%hilangkan tanda << & >>
 \pembimbing{\PAS}{}     
 %Lihat singkatan pembimbing anda di file dosen.tex, hilangkan tanda << & >>
 \penguji{<<penguji 1>>}{<<penguji 2>>} 		
@@ -185,9 +185,18 @@
 %			 bawahnya
 %=============================================================================
 
-\abstrakINA{<<Tuliskan abstrak anda di sini, dalam bahasa Indonesia>> \lipsum[5]}
+\abstrakINA{
+	Portal Akademik Mahasiswa merupakan sebuah situs jaringan yang diperuntukan bagi mahasiswa dalam rangka mendapatkan informasi kegiatan akademik. Namun, fitur-fitur yang dimilikinya masih belum mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika UNPAR. Oleh karena itu, dibuatlah aplikasi Informatika Student Portal.
+	
+	Informatika Student Portal merupakan aplikasi berbasis web yang dibuat menggunakan Play Framework. Data yang diolah Informatika Student Portal diambil langsung dari Portal Akademik Mahasiswa dengan memanfaatkan \textit{web scraping} yang diimplementasikan menggunakan jsoup. Untuk mendapatkan data tersebut, perlu dilakukan analisis komunikasi dari Portal Akademik Mahasiswa. Analisis tersebut dilakukan menggunakan Chrome DevTools. Data yang telah diambil menggunakan jsoup dapat diseleksi dengan memanfaatkan CSS \textit{Selector} kemudian data tersebut akan diolah menggunakan SIA Models. 
+	
+	Pengujian dari aplikasi Informatika Student Portal dilakukan oleh beberapa mahasiswa dengan kriteria yang beragam. Aplikasi dapat berjalan dengan baik dan memberikan hasil yang tepat pada seluruh mahasiswa kecuali mahasiswa yang pernah melakukan transfer studi. Hasil pengujian aplikasi Informatika Student Portal membuktikan bahwa \textit{web scraping} dapat dimanfaatkan memenuhi kebutuhan akademik mahasiswa Program Studi Teknik Informatika UNPAR jika digabungkan dengan SIA Models.
+ 	
+}
 
-\abstrakENG{<<Tuliskan abstrak anda di sini, dalam bahasa Inggris>> \lipsum[5]} 
+\abstrakENG{
+
+} 
 
 %=============================================================================
 
@@ -199,9 +208,9 @@
 % - kunciINA: kata-kata kunci dalam bahasa indonesia
 % - kunciENG: keywords in english
 %=============================================================================
-\kunciINA{<<Tuliskan di sini kata-kata kunci yang anda gunakan, dalam bahasa Indonesia>>}
+\kunciINA{Informatika Student Portal, Portal Akademik Mahasiswa, Teknik Informatika UNPAR, \textit{Web Scraping}, jsoup, Play Framework, SIA Models, Chrome DevTools, CSS \textit{Selector}}
 
-\kunciENG{<<Tuliskan di sini kata-kata kunci yang anda gunakan, dalam bahasa Inggris>>}
+\kunciENG{Informatika Student Portal, Portal Akademik Mahasiswa, Informatics Engineering UNPAR, Web Scraping, jsoup, Play Framework, SIA Models, Chrome DevTools, CSS Selector}
 %=============================================================================
 
 %_____________________________________________________________________________
@@ -210,7 +219,7 @@
 %=============================================================================
 % Persembahan : kepada siapa anda mempersembahkan skripsi ini ...
 %=============================================================================
-\untuk{<<kepada siapa anda mempersembahkan skripsi ini\ldots?>>}
+\untuk{Teknik Informatika UNPAR dan diri sendiri}
 %=============================================================================
 
 %_____________________________________________________________________________
